crates/plotnik-lib/tests/02-parser/recovery_validation/empty_anonymous_node_double_quotes.txt
Q = (node "")
------------------ DIAGNOSTICS -------------------
error: empty string matches nothing
 --> query.ptk:1:11
  |
1 | Q = (node "")
  |           ^^
  |
help: anonymous nodes match literal tokens, like `"+"` or `";"`
